@@ -1,3 +1,7 @@
+2010-12-12 Sun  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinylib.el (ti::buffer-parse-grep-line): Fix let*.
+
 2010-12-12  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinydesk.el (tinydesk-remove-file-coments): Call
